--- a/CycloneII/synthese/Counter_irregularities.qsf
+++ b/CycloneII/synthese/Counter_irregularities.qsf
@@ -36,19 +36,29 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone IV E"
-set_global_assignment -name DEVICE Auto
+set_global_assignment -name FAMILY "Cyclone II"
+set_global_assignment -name DEVICE EP2C35F672C6
 set_global_assignment -name TOP_LEVEL_ENTITY top_counter_verification
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "09:03:15  SEPTEMBER 21, 2015"
-set_global_assignment -name LAST_QUARTUS_VERSION 14.0
+set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name EDA_SIMULATION_TOOL "QuestaSim (VHDL)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
+set_global_assignment -name VHDL_FILE ../vhdl/counter.vhd
+set_global_assignment -name VHDL_FILE ../vhdl/top_counter_verification.vhd
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name TIMEQUEST_DO_CCPP_REMOVAL OFF
+set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
+set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_N2 -to CLOCK_50
 set_location_assignment PIN_AA7 -to DRAM_CLK
 set_location_assignment PIN_AD25 -to SD_CLK
@@ -127,6 +137,7 @@ set_location_assignment PIN_AE12 -to LEDR[16]
 set_location_assignment PIN_AD12 -to LEDR[17]
 set_location_assignment PIN_AF10 -to HEX0[0]
 set_location_assignment PIN_AB12 -to HEX0[1]
+set_location_assignment PIN_G26 -to KEY_0
 set_location_assignment PIN_N23 -to KEY[1]
 set_location_assignment PIN_P23 -to KEY[2]
 set_location_assignment PIN_W26 -to KEY[3]
@@ -352,15 +363,6 @@ set_location_assignment PIN_G4 -to OTG_DATA[12]
 set_location_assignment PIN_G3 -to OTG_DATA[13]
 set_location_assignment PIN_J6 -to OTG_DATA[14]
 set_location_assignment PIN_K8 -to OTG_DATA[15]
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
-set_global_assignment -name VHDL_FILE ../vhdl/counter.vhd
-set_global_assignment -name VHDL_FILE ../vhdl/top_counter_verification.vhd
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name TIMEQUEST_DO_CCPP_REMOVAL OFF
 set_location_assignment PIN_AD2 -to DRAM_LDQM
 set_location_assignment PIN_Y5 -to DRAM_UDQM
 set_location_assignment PIN_D13 -to CLOCK_27
@@ -410,6 +412,7 @@ set_location_assignment PIN_B23 -to ENET_RST_N
 set_location_assignment PIN_AE24 -to IRDA_TXD
 set_location_assignment PIN_AD24 -to SD_DAT
 set_location_assignment PIN_AC23 -to SD_DAT3
+set_location_assignment PIN_D25 -to GPIO_0_0
 set_location_assignment PIN_J22 -to GPIO_0[1]
 set_location_assignment PIN_E26 -to GPIO_0[2]
 set_location_assignment PIN_E25 -to GPIO_0[3]
@@ -481,8 +484,5 @@ set_location_assignment PIN_V24 -to GPIO_1[32]
 set_location_assignment PIN_V23 -to GPIO_1[33]
 set_location_assignment PIN_W25 -to GPIO_1[34]
 set_location_assignment PIN_W23 -to GPIO_1[35]
-set_location_assignment PIN_G26 -to KEY_0
-set_location_assignment PIN_D25 -to GPIO_0_0
-set_global_assignment -name VHDL_INPUT_VERSION VHDL_2008
-set_global_assignment -name VHDL_SHOW_LMF_MAPPING_MESSAGES OFF
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
